--- a/docs/README_convert_tables.adoc
+++ b/docs/README_convert_tables.adoc
@@ -26,31 +26,31 @@ include::partials/run.adoc[]
 ----
 Использование:
 {name} {script-name} <DOCX_FILE>
--p/--parse DIR_TABLES | -t/--temp TEMP_DIR | -e/--escape | -r/--remove | -f/--fix | -k/--keep |
---keep-logs | --h/--help
+-p/--parse DIR_TABLES | -t/--temp TEMP_DIR | -e/--escape | -r/--remove | --fix | --keep |
+-k/--keep-logs | --h/--help
 
   Команда для корректного извлечения таблиц из файлов docx в формат Markdown
 
 Аргументы:
-  docx_file                              Путь до файла Word в формате *.docx или *.docm
+  docx_file (*)                          Путь до файла Word в формате *.docx или *.docm
 
 Опции:
   -p, --parse DIR_TABLES                 Директория для таблиц. По умолчанию: ./tables/.
                                          Если не существует, то будет создана
   -t, --temp TEMP_DIR                    Временная директория. По умолчанию: ./_temp/.
                                          Если не существует, то будет создана
-  -e, --escape / --no-escape             Флаг экранирования символов '<', '>'.
+  -e, --escape / -E, --no-escape         Флаг экранирования символов '<', '>'.
                                          По умолчанию: True, добавление '\' перед символами
-  -r, --remove / --no-remove             Флаг удаления всех множественных пробелов и пробелов
+  -r, --remove / -R, --no-remove         Флаг удаления всех множественных пробелов и пробелов
                                          перед знаками препинания.
                                          По умолчанию: True, удаление всех лишних пробелов
-  -f, --fix / --no-fix                   Флаг удаления лишних пробелов и экранирования символов.
+  --fix / --no-fix                       Флаг удаления лишних пробелов и экранирования символов.
                                          По умолчанию: не задано, определяется параметрами
                                          --escape и --remove.
                                          Приоритет выше, чем у опций --escape и --remove.
                                          Примечание. Не может использоваться одновременно с
                                          --keep
-  -k, --keep / --no-keep                 Флаг извлечения текста без дополнительной обработки.
+  --keep / --no-keep                     Флаг извлечения текста без дополнительной обработки.
                                          По умолчанию: не задано, определяется параметрами
                                          --escape и --remove.
                                          Приоритет выше, чем у опций --escape и --remove.
