--- a/docs/README_link_repair.adoc
+++ b/docs/README_link_repair.adoc
@@ -25,26 +25,26 @@ include::partials/run.adoc[]
 ----
 Использование:
 {name} {script-name} <PATHDIR>
--a/--anchor-disable | -d/--dry-run | -n/--no-result | -s/--separate | --skip-en | --keep-logs |
+-a/--anchor | -d/--dry-run | -n/--no-result | -s/--separate | -e/--skip-en | -k/--keep-logs |
 --h/--help
 
   Команда для проверки и исправления ссылок в файлах документации
 
 Аргументы:
-  pathdir                                Путь до директории для обработки *.md- и *.adoc-файлов
+  pathdir (*)                            Путь до директории для обработки *.md- и *.adoc-файлов
 
 Опции:
-  -a, --anchor-disable                   Флаг поиска повторяющихся якорей.
+  -a, --anchor / -A, --no-anchor         Флаг поиска повторяющихся якорей.
                                          По умолчанию: True, дублирующийся якори обрабатываются
-  -d, --dry-run                          Флаг вывода некорректных ссылок на экран без изменения
+  -d, --dry-run / -D, --no-dry-run       Флаг вывода некорректных ссылок на экран без изменения
                                          файлов.
                                          По умолчанию: False, файлы перезаписываются
-  -n, --no-result                        Флаг удаления файла с результатами работы скрипта по
+  -n, --no-result / -N, --with-result    Флаг удаления файла с результатами работы скрипта по
                                          завершении работы в штатном режиме.
                                          По умолчанию: False, файл сохраняется
-  -s, --separate                         Флаг раздельной обработки файлов на различных языках.
+  -s, --separate / -S, --together        Флаг раздельной обработки файлов на различных языках.
                                          По умолчанию: True, файлы обрабатываются отдельно
-  --skip-en                              Флаг обработки файлов только на русском языке.
+  -e, --skip-en / -E, --keep-en          Флаг обработки файлов только на русском языке.
                                          По умолчанию: False, обрабатываются файлы на обоих
                                          языках
   {keep-logs}
