--- a/docs/README_validate_yaml.adoc
+++ b/docs/README_validate_yaml.adoc
@@ -46,6 +46,8 @@ include::partials/run.adoc[]
 
 Опции:
   -o, --output FILE                      Файл для записи вывода. По умолчанию: вывод в консоль
+  -g, --guess / -G, --no-guess           Флаг вывода возможных корректных путей.
+                                         По умолчанию: True, отображаются предполагаемые замены
   -v, --verbose / -q, --quiet            Флаг подробного вывода.
                                          По умолчанию: False, выводятся только ошибки
   {keep-logs}
