--- a/README.adoc
+++ b/README.adoc
@@ -217,6 +217,8 @@ include::docs/README_reduce_image.adoc[]
 
 include::docs/README_repair_svg.adoc[]
 
+include::docs/README_substitute.adoc[]
+
 include::docs/README_table_cols.adoc[]
 
 include::docs/README_terms.adoc[]
