--- a/README.adoc
+++ b/README.adoc
@@ -199,6 +199,8 @@ include::docs/partials/get_path.adoc[]
 
 :leveloffset: +1
 
+include::docs/README_auto_update.adoc[]
+
 include::docs/README_check_russian.adoc[]
 
 include::docs/README_convert_tables.adoc[]
