--- a/docs/README_auto_update.adoc
+++ b/docs/README_auto_update.adoc
@@ -82,3 +82,8 @@ $ source ~/.bashrc
 ----
 +
 . Разорвать соединение с Интернетом, чтобы запросы к репозиторию git были неуспешными.
+
+[CAUTION]
+Для самых наблюдательных: если задать _TW_UTILITIES_UPDATE = -1, то напоминание не будет отображаться в консоли, а скрипт не будет пытаться обновиться.
+Может быть полезно, если запускается много скриптов подряд, поскольку в этом случае игнорируется вся проверка и сравнение версий, а также загрузка файла.
+Это ускорит и упростит запуск, а также вывод консоли будет почище.
