--- a/README.adoc
+++ b/README.adoc
@@ -78,30 +78,32 @@ $ <path/to/{name}> COMMAND OPTIONS
   Набор скриптов для технических писателей
 
 Опции:
-  --debug                         Флаг активации режима отладки.
-                                  По умолчанию: False, режим отключен
-  -u, --update / -U, --no-update  Флаг автообновления перед выполнением команды.
-                                  По умолчанию: True, автообновление активно
-  --version                       Вывести версию скрипта на экран и завершить работу
-  -h, --help                      Вывести справочную информацию на экран и завершить работу
+  --debug                          Флаг активации режима отладки.
+                                   По умолчанию: False, режим отключен
+  -u, --update / -U, --no-update   Флаг автообновления перед выполнением команды.
+                                   По умолчанию: True, автообновление активно
+  --version                        Вывести версию скрипта на экран и завершить работу
+  -h, --help                       Вывести справочную информацию на экран и завершить работу
 
 Подкоманды:
-  check-russian                   Команда для проверки наличия непереведенных слов
-  convert-tables                  Команда для корректного извлечения таблиц из файлов
-                                  docx в формат Markdown
-  filter-images                   Команда для удаления неиспользуемых изображений
-  format-code                     Команда для форматирования блоков кода
-  get-terms                       Команда для вывода расшифровки аббревиатур
-  help                            Команда для вызова полной справки
-  list-files                      Команда для вывода файлов в директории
-  reduce-images                   Команда для уменьшения веса изображений JPG, PNG
-  repair-links                    Команда для проверки и исправления ссылок в файлах
-                                  документации
-  repair-svg                      Команда для исправления файлов SVG
-  set-table-cols                  Команда для задания ширины столбцам таблиц
-  substitute                      Команда для замены переменных на их значения
-  validate-yaml / check / yaml    Команда для валидации YAML-файла, используемого при
-                                  генерации PDF
+  check-russian                    Команда для проверки наличия непереведенных слов
+  convert-tables                   Команда для корректного извлечения таблиц из файлов docx
+                                   в формат Markdown
+  filter-images                    Команда для удаления неиспользуемых изображений
+  format-code                      Команда для форматирования блоков кода
+  generate-yaml                    Команда для генерации YAML-файла, используемого при
+                                   сборке PDF
+  get-terms                        Команда для вывода расшифровки аббревиатур
+  help                             Команда для вызова полной справки
+  list-files                       Команда для вывода файлов в директории
+  reduce-images                    Команда для уменьшения веса изображений JPG, PNG
+  repair-links                     Команда для проверки и исправления ссылок в файлах
+                                   документации
+  repair-svg                       Команда для исправления файлов SVG
+  set-table-cols                   Команда для задания ширины столбцам таблиц
+  substitute                       Команда для замены переменных на их значения
+  validate-yaml / check / yaml     Команда для валидации YAML-файла, используемого при
+                                   генерации PDF
 ----
 
 === Примеры
