--- a/docs/partials/help.adoc
+++ b/docs/partials/help.adoc
@@ -38,6 +38,11 @@ tw_utilities format-code
 ------------------------------------------------------------------------------------------------
 
 Использование:
+tw_utilities generate-yaml <PROJECT>
+<...>
+------------------------------------------------------------------------------------------------
+
+Использование:
 tw_utilities get-terms <TERMS>
 <...>
 ------------------------------------------------------------------------------------------------
