--- a/README.adoc
+++ b/README.adoc
@@ -227,7 +227,7 @@ $ python3 ./__main__.py <command> <optioms>
 * pip-system-certs: >= 4.0
 * python-frontmatter: >= 1.1
 * python-slugify: >= 8.0
-* pyyaml: >= 6.0
+* ruamel.yaml: >= 6.0
 
 == Некоторые рекомендации
 
