--- a/docs/README_substitute.adoc
+++ b/docs/README_substitute.adoc
@@ -52,4 +52,4 @@ NOTE: Путь может быть как абсолютным, так и отн
 
 === Примеры
 
-include::partials/reduce-images.adoc[]
+// include::partials/substitute.adoc[]
